--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.103.2"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
 
 
 [build-system]
