fix: docker container port

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -6,4 +6,4 @@ start:
 
 docker-start:
 	docker build --rm -t programming-question-rewriter .
-	docker run --rm --net=host programming-question-rewriter
+	docker run --rm -p ${PORT:-8000}:8000 programming-question-rewriter
